🐛 When generating an agent, the agent name and agent description should be generated.

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -276,8 +276,10 @@
     "guide.steps.completeCreation.title": "Complete Creation/Modification",
     "guide.steps.completeCreation.description": "Start using",
     "agent.title": "智能体",
-    "agent.name": "Agent Name",
-    "agent.namePlaceholder": "Please enter agent name",
+    "agent.name": "Agent Variable Name",
+    "agent.namePlaceholder": "Please enter agent variable name",
+    "agent.displayName": "Agent Name",
+    "agent.displayNamePlaceholder": "Please enter agent name",
     "agent.description": "Agent Description",
     "agent.descriptionPlaceholder": "Please enter agent description",
     "agent.detailContent.title": "Agent Detail Content",
