--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -276,8 +276,10 @@
     "guide.steps.completeCreation.title": "完成创建/修改",
     "guide.steps.completeCreation.description": "开始使用吧",
     "agent.title": "Agent",
-    "agent.name": "Agent名称",
-    "agent.namePlaceholder": "请输入Agent名称",
+    "agent.name": "Agent变量名",
+    "agent.namePlaceholder": "请输入Agent变量名",
+    "agent.displayName": "Agent名称",
+    "agent.displayNamePlaceholder": "请输入Agent名称",
     "agent.description": "Agent描述",
     "agent.descriptionPlaceholder": "请输入Agent描述",
     "agent.detailContent.title": "Agent详细内容",
