✨ Model access supports modification access - 1. Batch import models, at the deletion event point, supports batch toggle switch

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -642,6 +642,9 @@
     "model.dialog.error.noModelsFetched": "No models retrieved, please check API key",
     "model.dialog.message.noModels": "Please fetch models first",
     "model.dialog.error.invalidVectorDimension": "Please enter a positive integer",
+    "model.dialog.editTitle": "Edit Model",
+    "model.dialog.editSuccess": "Model updated successfully",
+    "model.dialog.error.editFailed": "Failed to update model",
     "model.type.all": "All Models",
     "model.type.llm": "Large Language Model",
     "model.type.embedding": "Embedding Model",
@@ -666,8 +669,11 @@
     "common.notice": "Notice",
     "common.button.close": "Close",
     "common.button.cancel": "Cancel",
+    "common.button.save": "Save",
     "model.source.custom": "Custom",
     "model.source.modelEngine": "ModelEngine",
+    "model.source.openai": "OpenAI",
+    "model.source.silicon": "Silicon Flow",
     "model.source.unknown": "Unknown Source",
     "model.warning.updateNotFound": "Model not found for update: {{displayName}}, type: {{type}}",
     "model.type.main": "Main Model",
