--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -642,6 +642,9 @@
     "model.dialog.error.noModelsFetched": "未获取到模型，请检查apikey",
     "model.dialog.message.noModels": "请先获取模型",
     "model.dialog.error.invalidVectorDimension": "请输入大于0的整数",
+    "model.dialog.editTitle": "编辑模型",
+    "model.dialog.editSuccess": "模型更新成功",
+    "model.dialog.error.editFailed": "更新模型失败",
     "model.type.all": "全部模型",
     "model.type.llm": "大语言模型",
     "model.type.embedding": "向量化模型",
@@ -650,6 +653,7 @@
     "model.type.stt": "语音识别模型",
     "model.type.tts": "语音合成模型",
     "common.button.cancel": "取消",
+    "common.button.save": "保存",
     "model.type.multiEmbedding": "多模态向量模型",
     "model.type.unknown": "未知模型",
     "model.dialog.delete.title": "删除自定义模型",
@@ -669,6 +673,8 @@
     "model.source.custom": "自定义",
     "model.source.modelEngine": "ModelEngine",
     "model.source.unknown": "未知来源",
+    "model.source.openai": "OpenAI",
+    "model.source.silicon": "硅基流动",
     "model.warning.updateNotFound": "未找到要更新的模型: {{displayName}}, 类型: {{type}}",
     "model.type.main": "主模型",
     "model.select.placeholder": "选择模型",
