--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -645,6 +645,9 @@
     "model.dialog.editTitle": "Edit Model",
     "model.dialog.editSuccess": "Model updated successfully",
     "model.dialog.error.editFailed": "Failed to update model",
+    "model.dialog.error.nameConflict": "Name '{{name}}' is already in use, please choose another display name",
+    "model.dialog.error.modelNotFound": "Model not found",
+    "model.dialog.error.serverError": "Server internal error, please try again later",
     "model.type.all": "All Models",
     "model.type.llm": "Large Language Model",
     "model.type.embedding": "Embedding Model",
@@ -654,8 +657,8 @@
     "model.type.tts": "Text-to-Speech Model",
     "model.type.multiEmbedding": "Multimodal Embedding Model",
     "model.type.unknown": "Unknown Model",
-    "model.dialog.delete.title": "Delete Custom Model",
-    "model.dialog.delete.selectType": "Please select the type of model to delete:",
+    "model.dialog.edit.title": "Edit Custom Model",
+    "model.dialog.edit.selectType": "Please select the type of model to edit:",
     "model.dialog.delete.customModelCount": "{{count}} custom models",
     "model.dialog.delete.unsupportedType": " (deletion not supported)",
     "model.dialog.delete.unsupportedTypeHint": "Deletion of this model type is not supported yet",
@@ -728,7 +731,7 @@
     "modelConfig.message.addSuccess": "Model added successfully",
     "modelConfig.button.syncModelEngine": "Sync ModelEngine Models",
     "modelConfig.button.addCustomModel": "Add Custom Model",
-    "modelConfig.button.deleteCustomModel": "Delete Custom Model",
+    "modelConfig.button.editCustomModel": "Edit Custom Model",
     "modelConfig.button.checkConnectivity": "Check Model Connectivity",
     "setup.page.error.checkConnection": "Failed to check connection status:",
     "setup.page.error.saveConfig": "Failed to save configuration, please try again",
