--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -645,6 +645,9 @@
     "model.dialog.editTitle": "编辑模型",
     "model.dialog.editSuccess": "模型更新成功",
     "model.dialog.error.editFailed": "更新模型失败",
+    "model.dialog.error.nameConflict": "名称 '{{name}}' 已被使用，请选择其他显示名称",
+    "model.dialog.error.modelNotFound": "模型未找到",
+    "model.dialog.error.serverError": "服务器内部错误，请稍后重试",
     "model.type.all": "全部模型",
     "model.type.llm": "大语言模型",
     "model.type.embedding": "向量化模型",
@@ -656,8 +659,8 @@
     "common.button.save": "保存",
     "model.type.multiEmbedding": "多模态向量模型",
     "model.type.unknown": "未知模型",
-    "model.dialog.delete.title": "删除自定义模型",
-    "model.dialog.delete.selectType": "请选择要删除的模型类型：",
+    "model.dialog.edit.title": "修改自定义模型",
+    "model.dialog.edit.selectType": "请选择要修改的模型类型：",
     "model.dialog.delete.customModelCount": "{{count}} 个自定义模型",
     "model.dialog.delete.unsupportedType": " (暂不支持删除)",
     "model.dialog.delete.unsupportedTypeHint": "暂不支持删除此类型模型",
@@ -728,7 +731,7 @@
     "modelConfig.message.addSuccess": "添加模型成功",
     "modelConfig.button.syncModelEngine": "同步ModelEngine模型",
     "modelConfig.button.addCustomModel": "添加自定义模型",
-    "modelConfig.button.deleteCustomModel": "删除自定义模型",
+    "modelConfig.button.editCustomModel": "修改自定义模型",
     "modelConfig.button.checkConnectivity": "检查模型连通性",
     "setup.page.error.checkConnection": "检查连接状态失败：",
     "setup.page.error.saveConfig": "保存配置失败，请重试",
