--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -911,7 +911,7 @@
           "inviteCodeError": "Invalid invite code",
           "passwordError": "Password error",
           "emailError": "Email format error",
-          "inviteCodeNotConfigured": "🚫 Administrator registration is currently unavailable, please contact system administrator to configure invite code",
+          "inviteCodeNotConfigured": "Admin invite code is not configured yet. Please contact system admin for help.",
           "inviteCodeInvalid": "Invalid administrator invite code, please check and try again",
           "emailAlreadyExists": "This email is already registered, please use another email or try logging in",
           "weakPassword": "Password is too weak, please set a more secure password",
