✨ Model access supports modification access - 2. Add batch modification functionality

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -639,8 +639,9 @@
     "model.dialog.error.verificationError": "Failed to verify connectivity: {{error}}",
     "model.dialog.error.addFailed": "Failed to add model: {{error}}",
     "model.dialog.error.addFailedLog": "Failed to add model",
-    "model.dialog.error.noModelsFetched": "No models retrieved, please check API key",
+    "model.dialog.error.noModelsFetched": "Please check your API key and network connectivity",
     "model.dialog.message.noModels": "Please fetch models first",
+    "model.dialog.success.updateSuccess": "Updated successfully",
     "model.dialog.error.invalidVectorDimension": "Please enter a positive integer",
     "model.dialog.editTitle": "Edit Model",
     "model.dialog.editSuccess": "Model updated successfully",
@@ -666,6 +667,7 @@
     "model.dialog.delete.noModels": "No custom models available for deletion",
     "model.dialog.delete.noModelsOfType": "No {{type}} available for deletion",
     "model.dialog.delete.warning": "Model deletion cannot be undone. If you delete a model that is currently in use, related configurations will be reset.",
+    "model.dialog.edit.warning": "Before batch editing models, please confirm the correctness of the related API keys. If you edit the model currently in use, related configurations will be reset.",
     "model.message.deleteSuccess": "Successfully deleted model: {{name}}",
     "model.message.deleteFailed": "Failed to delete model: {{name}}",
     "model.error.deleteError": "Error deleting model:",
@@ -684,6 +686,9 @@
     "model.group.modelEngine": "ModelEngine Models",
     "model.group.custom": "Custom Models",
     "model.status.tooltip": "Click to verify connectivity",
+    "common.button.editConfig": "Edit Configuration",
+    "common.message.refreshSuccess": "Refresh successful",
+    "common.message.refreshFailed": "Refresh failed",
     "appConfig.appName.label": "Application Name",
     "appConfig.appName.placeholder": "Please enter your application name",
     "appConfig.description.label": "Description",
