--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -1052,12 +1052,12 @@
     "agentConfig.tools.refreshFailed": "Failed to refresh tool list",
     "agentConfig.debug.refreshToolsFailed": "Failed to refresh tool list:",
     "embedding": {
-        "modal": {
-        "title": "No Embedding Model Selected",
-        "content": "You have not selected an <b>Embedding</b> model. Knowledge base configuration and retrieval tools will be unavailable.",
-        "tip": "Please select a suitable Embedding model in the model configuration for a complete experience.",
-        "ok": "Got it",
-        "ok_continue": "Got it, continue to the next step"
+        "emptyWarningModal": {
+            "title": "No Embedding Model Selected",
+            "content": "You have not selected an Embedding model. Knowledge base configuration, retrieval tools and memories will be unavailable.",
+            "tip": "Please select a suitable Embedding model in the model configuration for a complete experience.",
+            "cancel": "Back to configuration",
+            "ok_continue": "Got it, continue to the next step"
         }
     },
     "chatStreamMain": {
