♻️ Refactor: ModelConnectStatusEnum using chinese value, should be in english #470

--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -625,6 +625,7 @@
     "model.dialog.connectivity.status.checking": "检测中",
     "model.dialog.connectivity.status.available": "可用",
     "model.dialog.connectivity.status.unavailable": "不可用",
+    "model.dialog.connectivity.status.not_detected": "未检测",
     "model.dialog.button.modelList": "获取模型",
     "model.dialog.button.verify": "点击验证",
     "model.dialog.button.verifying": "验证中...",
@@ -725,6 +726,7 @@
     "modelConfig.status.available": "可用",
     "modelConfig.status.unavailable": "不可用",
     "modelConfig.status.checking": "检测中",
+    "modelConfig.status.not_detected": "未检测",
     "modelConfig.error.loadList": "加载模型列表失败:",
     "modelConfig.error.loadListFailed": "加载模型列表失败",
     "modelConfig.error.syncFailed": "同步模型失败",
