--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -393,11 +393,12 @@
     "common.enabled": "已启用",
     "common.disabled": "已禁用",
     "common.unknownError": "未知错误",
-    "agent.action.create": "新建Agent",
-    "agent.action.modify": "修改",
+    "agent.action.create": "创建Agent",
+    "agent.action.modify": "modify",
     "agent.action.importing": "导入中...",
     "agent.action.import": "导入Agent",
-    "agent.message.saveSuccess": "Agent \"{name}\" {action}成功",
+    "agent.action.viewCallRelationship": "查看调用关系",
+    "agent.message.saveSuccess": "Agent \"{name}\" {action} successfully",
     "agent.message.infoLoaded": "Agent信息已加载",
     "agent.message.statusUpdated": "Agent \"{name}\" {status}",
     "agent.message.modelUpdateSuccess": "模型更新成功",
