--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -1157,5 +1157,16 @@
         }
     },
     "model.dialog.success.addBatchModel": "Batch add models succeeded!",
-    "model.dialog.error.addBatchModel": "Batch add models failed: {{message}}"
+    "model.dialog.error.addBatchModel": "Batch add models failed: {{message}}",
+    "agentCallRelationship": {
+        "title": "View Call Relationship",
+        "loading": "Loading call relationship...",
+        "description": "This flowchart shows the call relationship of {{name}} and all its tools and collaborative agents",
+        "noData": "No call relationship data available",
+        "nodeType": {
+            "main": "Main Agent",
+            "sub": "Sub Agent", 
+            "tool": "Tool"
+        }
+    }
 }
