✨ Edit added models' max_tokens

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -616,6 +616,9 @@
     "model.dialog.placeholder.apiKey": "Enter API Key (optional)",
     "model.dialog.placeholder.vectorDimension": "Enter vector dimension",
     "model.dialog.placeholder.maxTokens": "Enter maximum tokens",
+    "model.dialog.settings.title": "Model Settings",
+    "model.dialog.settings.label.maxTokens": "Max Tokens",
+    "model.dialog.modelList.tooltip.settings": "Model Settings",
     "model.dialog.hint.multimodalEnabled": "Multimodal vector model can process both images and text",
     "model.dialog.hint.multimodalDisabled": "Text vector model only processes text",
     "model.dialog.hint.batchImportEnabled": "Batch add enabled. Multiple models will be added at once.",
