--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -616,6 +616,9 @@
     "model.dialog.placeholder.apiKey": "请输入API Key（可选）",
     "model.dialog.placeholder.vectorDimension": "请输入向量维度",
     "model.dialog.placeholder.maxTokens": "请输入最大Token数",
+    "model.dialog.settings.title": "模型设置",
+    "model.dialog.settings.label.maxTokens": "最大Token数",
+    "model.dialog.modelList.tooltip.settings": "模型设置",
     "model.dialog.hint.multimodalEnabled": "多模态向量模型可处理图像和文本",
     "model.dialog.hint.multimodalDisabled": "文本向量模型仅处理文本",
     "model.dialog.hint.batchImportEnabled": "批量添加模式已启用，可通过apiKey一次性导入多个模型",
