--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -302,7 +302,7 @@
 
     "guide.steps.createOrEditAgent.title": "Create/Edit Agent",
     "guide.steps.createOrEditAgent.description": "Used to manage all agent information",
-    "guide.steps.selectCollaborativeAgent.title": "Select Collaborative Agent (optional)",
+    "guide.steps.selectCollaborativeAgent.title": "Select Collaborative Agent",
     "guide.steps.selectCollaborativeAgent.description": "Can help the current agent complete tasks",
     "guide.steps.selectTools.title": "Select Tools",
     "guide.steps.selectTools.description": "Agent can call tools to complete tasks",
@@ -398,7 +398,6 @@
     "agent.action.importing": "Importing...",
     "agent.action.import": "Import Agent",
     "agent.message.saveSuccess": "Agent \"{name}\" {action} successfully",
-    "agent.message.infoLoaded": "Agent information loaded",
     "agent.message.statusUpdated": "Agent \"{name}\" has been {status}",
     "agent.message.modelUpdateSuccess": "Model updated successfully",
     "agent.message.maxStepsUpdateSuccess": "Maximum steps updated successfully",
@@ -826,7 +825,6 @@
     "businessLogic.config.modal.button.cancel": "Cancel",
     "businessLogic.config.modal.button.confirm": "Confirm Delete",
     "businessLogic.config.message.agentCreated": "Agent {{name}} {{action}} successfully",
-    "businessLogic.config.message.agentInfoLoaded": "Agent information loaded",
     "businessLogic.config.message.agentStatusUpdated": "Agent {{name}} {{status}}",
     "businessLogic.config.message.modelUpdateSuccess": "Model updated successfully",
     "businessLogic.config.message.maxStepsUpdateSuccess": "Max steps updated successfully",
@@ -1137,7 +1135,7 @@
         "inputPlaceholder": "Please enter memory content"
     },
     "collaborativeAgent": {
-        "title": "Collaborative Agent",
+        "title": "Select Collaborative Agent",
         "button": {
             "add": "Add Collaborative Agent"
         },
