--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -1163,15 +1163,6 @@
     },
     "model.dialog.success.addBatchModel": "Batch add models succeeded!",
     "model.dialog.error.addBatchModel": "Batch add models failed: {{message}}",
-    "agentCallRelationship": {
-        "title": "View Call Relationship",
-        "loading": "Loading call relationship...",
-        "description": "This flowchart shows the call relationship of {{name}} and all its tools and collaborative agents",
-        "noData": "No call relationship data available",
-        "nodeType": {
-            "main": "Main Agent",
-            "sub": "Sub Agent", 
-            "tool": "Tool"
-        }
-    }
+    "agentCallRelationship": {"title": "View Call Relationship", "loading": "Loading call relationship...", "description": "This flowchart shows the call relationship of {{name}} and all its tools and collaborative agents", "noData": "No call relationship data available", "nodeType": {"main": "Main Agent", "sub": "Sub Agent", "tool": "Tool"}},
+    "agentConfig": {"error": {"fetchToolsFailed": "Failed to fetch tools list, please try again later", "fetchAgentListFailed": "Failed to fetch agent list, please try again later", "fetchCreatingSubAgentIdFailed": "Failed to fetch creating sub agent ID, please try again later", "fetchAgentDetailsFailed": "Failed to fetch agent details, please try again later", "fetchAgentCallRelationshipFailed": "Failed to fetch agent call relationship, please try again later"}}
 }
