--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -1160,15 +1160,6 @@
     "common.message.refreshSuccess": "刷新成功",
     "common.message.refreshFailed": "刷新失败",
     "model.dialog.success.updateSuccess": "更新成功",
-    "agentCallRelationship": {
-        "title": "查看调用关系",
-        "loading": "正在加载调用关系...",
-        "description": "此流程图显示了 {{name}} 及其所有工具和协作Agent的调用关系",
-        "noData": "暂无调用关系数据",
-        "nodeType": {
-            "main": "主代理",
-            "sub": "子代理",
-            "tool": "工具"
-        }
-    }
+    "agentCallRelationship": {"title": "查看调用关系", "loading": "正在加载调用关系...", "description": "此流程图显示了 {{name}} 及其所有工具和协作Agent的调用关系", "noData": "暂无调用关系数据", "nodeType": {"main": "主代理", "sub": "子代理", "tool": "工具"}},
+    "agentConfig": {"error": {"fetchToolsFailed": "获取工具列表失败，请稍后重试", "fetchAgentListFailed": "获取Agent列表失败，请稍后重试", "fetchCreatingSubAgentIdFailed": "获取创建子Agent ID失败，请稍后重试", "fetchAgentDetailsFailed": "获取Agent详情失败，请稍后重试", "fetchAgentCallRelationshipFailed": "获取Agent调用关系失败，请稍后重试"}}
 }
