🐛 Improved logic for single join model modification #1083

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -486,6 +486,9 @@
     "model.provider.silicon": "SiliconFlow",
     "model.dialog.modelList.title": "Show Models",
     "model.dialog.connectivity.title": "Connectivity Verification",
+    "model.dialog.connectivity.status.checking": "Checking...",
+    "model.dialog.connectivity.status.available": "Connectivity verification successful!",
+    "model.dialog.connectivity.status.unavailable": "Connectivity verification failed",
     "model.dialog.button.modelList": "Get Models",
     "model.dialog.button.verify": "Verify",
     "model.dialog.button.verifying": "Verifying...",
@@ -496,6 +499,8 @@
     "model.dialog.warning.incompleteForm": "Please complete the model configuration information first",
     "model.dialog.status.verifying": "Verifying model connectivity...",
     "model.dialog.success.connectivityVerified": "Model connectivity verification successful!",
+    "model.validation.MODEL_VALIDATION_SUCCESS": "Model configuration {{displayName}} connectivity verification successful!",
+    "model.validation.MODEL_VALIDATION_FAILED": "Model configuration {{displayName}} connectivity verification failed!",
     "model.dialog.error.connectivityFailed": "Model connectivity verification failed: {{message}}",
     "model.dialog.error.verificationFailed": "Verification failed: {{error}}",
     "model.dialog.error.verificationError": "Failed to verify connectivity: {{error}}",
