--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -486,6 +486,9 @@
     "model.provider.silicon": "硅基流动",
     "model.dialog.modelList.title": "显示模型",
     "model.dialog.connectivity.title": "连通性验证",
+    "model.dialog.connectivity.status.checking": "正在验证...",
+    "model.dialog.connectivity.status.available": "连通性验证成功！",
+    "model.dialog.connectivity.status.unavailable": "连通性验证失败",
     "model.dialog.button.modelList": "获取模型",
     "model.dialog.button.verify": "点击验证",
     "model.dialog.button.verifying": "验证中...",
@@ -495,7 +498,9 @@
     "model.dialog.help.content.batchImport": "请填写提供商的基本信息，API Key和提供商名称为必填项，其他字段为可选项。",
     "model.dialog.warning.incompleteForm": "请先填写完整的模型配置信息",
     "model.dialog.status.verifying": "正在验证模型连通性...",
-    "model.dialog.success.connectivityVerified": "模型连通性验证成功！",
+    "model.dialog.success.connectivityVerified": "模型连通性验证成功",
+    "model.validation.MODEL_VALIDATION_SUCCESS": "模型配置{{displayName}}连通性验证成功!",
+    "model.validation.MODEL_VALIDATION_FAILED": "模型配置{{displayName}}连通性验证失败!",
     "model.dialog.error.connectivityFailed": "模型连通性验证失败：{{message}}",
     "model.dialog.error.verificationFailed": "验证失败: {{error}}",
     "model.dialog.error.verificationError": "验证连通性失败：{{error}}",
