✨ Truncation information of files that are too large is displayed to the user #1119

--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -24,6 +24,8 @@
     "chatInterface.parseFileFailed": "解析文件 {{filename}} 失败: {{message}}",
     "chatInterface.fileParsed": "文件 {{filename}} 已解析完成",
     "chatInterface.fileParsingComplete": "文件解析完成",
+    "chatInterface.fileParsingCompleteWithTruncation": "文件解析完成：{{truncationInfo}}",
+    "chatInterface.truncationSeparator": "；",
     "chatInterface.fileProcessingFailed": "文件处理失败: {{error}}",
     "chatInterface.filePreprocessingStopped": "文件解析已停止",
     "chatInterface.userCancelledRequest": "用户取消了请求",
@@ -186,7 +188,7 @@
     "chatStreamHandler.thinking": "正在思考中...",
     "chatStreamHandler.connectingMcpServer": "正在连接MCP服务器...",
     "chatStreamHandler.memoryRetrieving": "正在回忆中...",
-    "chatStreamHandler.memoryRetrieved": "回忆已完成。",
+    "chatStreamHandler.memoryRetrieved": "回忆已完成",
     "chatStreamHandler.memoryFailed": "回忆失败。已跳过...",
     "chatStreamHandler.generateTitleFailed": "生成标题失败:",
     "chatStreamHandler.streamResponseError": "处理流式响应时出错:",
