--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -24,6 +24,8 @@
     "chatInterface.parseFileFailed": "Failed to parse file {{filename}}: {{message}}",
     "chatInterface.fileParsed": "File {{filename}} has been parsed successfully",
     "chatInterface.fileParsingComplete": "File parsing complete",
+    "chatInterface.fileParsingCompleteWithTruncation": "File parsing complete: {{truncationInfo}}",
+    "chatInterface.truncationSeparator": "; ",
     "chatInterface.fileProcessingFailed": "File processing failed: {{error}}",
     "chatInterface.filePreprocessingStopped": "File parsing stopped",
     "chatInterface.userCancelledRequest": "User canceled the request",
@@ -186,7 +188,7 @@
     "chatStreamHandler.thinking": "Thinking...",
     "chatStreamHandler.connectingMcpServer": "Connecting to MCP server...",
     "chatStreamHandler.memoryRetrieving": "Retrieving memories...",
-    "chatStreamHandler.memoryRetrieved": "Memories retrieved.",
+    "chatStreamHandler.memoryRetrieved": "Memories retrieved",
     "chatStreamHandler.memoryFailed": "Memory retrieval failed. Continuing...",
     "chatStreamHandler.generateTitleFailed": "Failed to generate title:",
     "chatStreamHandler.streamResponseError": "Error processing streaming response:",
